--- a/css/style.css
+++ b/css/style.css
@@ -649,12 +649,14 @@ ul {
   color: gold;
 }
 
-
-
 /* laptop screen */
 
 @media (max-width: 1433px) {
-  ul{
+  .slideshow{
+    width: 100%;
+    height: 53vh;
+  }
+  ul {
     gap: 1.25rem;
   }
   .navigation {
@@ -669,25 +671,26 @@ ul {
   .logo i {
     font-size: 15px;
   }
-  .nav-list li a{
+  .nav-list li a {
     font-size: 14px;
   }
-  .box{
-    padding: 3px 6px ;
+  .box {
+    padding: 3px 6px;
   }
-  .box a, .box i{
+  .box a,
+  .box i {
     font-size: 10px;
   }
 
-  .sm{
+  .sm {
     gap: 3px;
   }
-  .sm i{
+  .sm i {
     font-size: 10px;
     width: 1.25rem;
     height: 1.25rem;
   }
-  .poster img{
+  .poster img {
     width: 16rem;
   }
   .anime-cart h5 {
@@ -697,18 +700,20 @@ ul {
     font-size: 13px;
   }
 
-  .all-anime-img img{
+  .all-anime-img img {
     width: 120px;
     height: 170px;
   }
-
 }
 
-@media (max-width: 1180px){
-  .poster img {
-    width: 190px;
+@media (max-width: 1180px) {
+  .slideshow {
+    width: 100%;
+    height: 43vh;
   }
-
+  .poster img {
+    width: 200px;
+  }
 
   .rat h3 {
     font-size: 15px;
@@ -716,7 +721,8 @@ ul {
 
   .rat h4 {
     font-size: 14px;
-    margin-top: 4px;
+    margin-top: 2px;
+    margin-left: 2px;
   }
 
   .rat h5 {
@@ -734,18 +740,17 @@ ul {
     overflow: hidden;
   }
 
-
   .ani-info h6 {
     font-size: 15px;
   }
   .ani-info h6 a {
     font-size: 15px;
   }
-  .content-slide{
+  .content-slide {
     align-items: center;
   }
 }
-@media (max-width: 1130px){
+@media (max-width: 1130px) {
   .rat h3 {
     font-size: 12px;
   }
@@ -764,11 +769,11 @@ ul {
     font-weight: 700;
   }
 
-  .main-content .left{
+  .main-content .left {
     width: 40%;
     margin-right: 0;
   }
-  .main-content .right{
+  .main-content .right {
     width: 55%;
     max-height: 620px;
     overflow: hidden;
@@ -778,21 +783,26 @@ ul {
   #main {
     flex-direction: column-reverse;
   }
-  #right{
+  #right {
     width: 100%;
     height: fit-content;
   }
-  #left{
+  #left {
     width: 100%;
     height: fit-content;
   }
-
 }
 
-@media (max-width: 1023px){
+@media (max-width: 1023px) {
+  .slideshow {
+    width: 100%;
+    height: 35vh;
+  }
 
+  .poster img{
+    width: 170px;
+  }
 
-  
   .cat {
     margin: 10px 0;
   }
@@ -811,11 +821,10 @@ ul {
     padding: 4px 9px;
   }
 
-
   .box {
     display: none;
   }
-  
+
   .main-content {
     flex-direction: column;
   }
@@ -827,17 +836,17 @@ ul {
   .main-content .right {
     width: 100%;
     margin-bottom: 10px;
+    overflow: visible;
+    max-height: fit-content;
   }
-  .paragraphe{
+  .paragraphe {
     font-size: 14px;
   }
-
 }
-
 
 /* Phone screen */
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
   .navigation {
     height: auto;
     padding: 1rem 1rem;
@@ -860,7 +869,7 @@ ul {
   }
   .slideshow {
     width: 100%;
-    height: 30vh;
+    height: 26vh;
   }
   .poster img {
     width: 120px;
@@ -921,14 +930,20 @@ ul {
 }
 
 @media (max-width: 700px) {
+  .slideshow{
+    width: 100%;
+    height: 25vh;
+  }
+  .navigation{
+    padding: 5px 3px;
+  }
   a {
     font-size: 10px;
   }
   ul {
     gap: 1.5rem;
   }
- 
-  
+
   .main-taitel h5 a {
     font-size: 14px;
   }
@@ -947,7 +962,10 @@ ul {
     margin-right: 4px;
     margin-left: 0;
   }
-  
+  .ani-info h6 a {
+    font-size: 9px;
+  }
+
   .all-anime {
     margin: 3px 8px;
   }
@@ -990,15 +1008,52 @@ ul {
     display: none;
   }
 }
-@media (max-width: 432px) {
+@media (max-width: 500px) {
+ 
   .slideshow {
-    height: 28vh;
+    width: 100%;
+    height: 22vh;
+  }
+  .carousel-indicators{
+    display: none;
+  }
+  .content-slide {
+    gap: 9px;
+  }
+.rat h3{
+  margin-top: 3px;
+}
+  .ani-info h2 {
+    font-size: 12px;
+  }
+
+  .ani-info h6{
+    margin: 4px 0;
+  }
+  .ani-info a {
+    font-size: 7px;
+  }
+
+  .cat {
+    margin: 1px 0;
+  }
+  .cat a {
+    padding: 2px 4.5px;
+    border: 1px solid gold;
   }
   .logo a {
     font-size: 9px;
   }
   .poster img {
-    width: 100px;
+    width: 90px;
+  }
+  .btn-watch a{
+    font-size: 6px;
+    font-weight: 700;
+
+  }
+  .btn-watch{
+    margin-top: 9px;
   }
 
   .nav-list li a {
@@ -1013,4 +1068,6 @@ ul {
   .rat h5 {
     font-size: 8px;
   }
+
 }
+
