--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ ul {
 }
 
 .poster img {
-  width: 16.625rem;
+  width: 16rem;
   border-radius: 1rem;
   box-shadow: 0 5px 25px rgba(1, 1, 1, 30%);
   transition: all 0.7s;
@@ -649,10 +649,30 @@ ul {
   color: gold;
 }
 
+footer {
+  color: whitesmoke;
+  text-align: center;
+  padding: 20px 10px;
+  font-size: 14px;
+  border-top: 2px solid gold;
+}
+
+footer a {
+  color: gold;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.7s;
+}
+
+footer a:hover {
+  color: whitesmoke;
+  text-decoration: underline;
+}
+
 /* laptop screen */
 
 @media (max-width: 1433px) {
-  .slideshow{
+  .slideshow {
     width: 100%;
     height: 53vh;
   }
@@ -799,7 +819,7 @@ ul {
     height: 35vh;
   }
 
-  .poster img{
+  .poster img {
     width: 170px;
   }
 
@@ -930,11 +950,11 @@ ul {
 }
 
 @media (max-width: 700px) {
-  .slideshow{
+  .slideshow {
     width: 100%;
     height: 25vh;
   }
-  .navigation{
+  .navigation {
     padding: 5px 3px;
   }
   a {
@@ -1009,25 +1029,24 @@ ul {
   }
 }
 @media (max-width: 500px) {
- 
   .slideshow {
     width: 100%;
     height: 22vh;
   }
-  .carousel-indicators{
+  .carousel-indicators {
     display: none;
   }
   .content-slide {
     gap: 9px;
   }
-.rat h3{
-  margin-top: 3px;
-}
+  .rat h3 {
+    margin-top: 3px;
+  }
   .ani-info h2 {
     font-size: 12px;
   }
 
-  .ani-info h6{
+  .ani-info h6 {
     margin: 4px 0;
   }
   .ani-info a {
@@ -1047,12 +1066,11 @@ ul {
   .poster img {
     width: 90px;
   }
-  .btn-watch a{
+  .btn-watch a {
     font-size: 6px;
     font-weight: 700;
-
   }
-  .btn-watch{
+  .btn-watch {
     margin-top: 9px;
   }
 
@@ -1068,6 +1086,4 @@ ul {
   .rat h5 {
     font-size: 8px;
   }
-
 }
-
